--- a/style.css
+++ b/style.css
@@ -208,7 +208,6 @@ main .card:nth-child(3) .card__header {
     z-index: 10;
     border: none;
     color: var(--text-color);
-
 }
 #task_dialog .form_task {
     position: absolute;
@@ -283,6 +282,24 @@ main .card:nth-child(3) .card__header {
     main {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
+    .btn {
+        font-size: 15px;
+    }
+    .input {
+        font-size: 15px;
+    }
+    :root {
+        --font-title: 20px;
+    }
+    .card__content_item_description {
+        font-size: 16px;
+    }
+    .card__content_item_action .active {
+        font-size: 13px;
+    }
+    .card__content_item_action .edit, .card__content_item_action .delete {
+        font-size: 13px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -296,14 +313,21 @@ main .card:nth-child(3) .card__header {
     header button:first-of-type {
         width: 100%;
     }
-    
+
     header button:last-of-type {
         width: 100%;
     }
-    header input, header select{
+    header input,
+    header select {
         max-width: 100% !important;
     }
     .form_task {
         width: 350px !important;
+    }
+    .btn {
+        font-size: 20px;
+    }
+    .input {
+        font-size: 20px;
     }
 }
