--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+/* css scrollbar */
+::-webkit-scrollbar {
+    display: none;
+}
+
 :root {
     --bg-color: #677dea;
     --bg-secondary-color: #744ca5;
@@ -108,6 +113,8 @@ main {
     height: 400px;
     border-radius: 10px;
     padding: 20px;
+    overflow-y: auto;
+    z-index: 100;
 }
 
 .card__header {
@@ -155,6 +162,8 @@ main .card:nth-child(3) .card__header {
     flex-direction: column;
     gap: 6px;
     border: var(--btn-secondary) 1px solid;
+    cursor: grab;
+    transition-duration: 300ms;
 }
 
 .card__content_item_title {
@@ -173,10 +182,8 @@ main .card:nth-child(3) .card__header {
 
 .card__content_item_action .active {
     font-size: 10px;
-    background: #bfe3f9;
     padding: 4px 7px;
     border-radius: 50px;
-    color: #376ba7;
 }
 
 .card__content_item_action .edit {
@@ -205,7 +212,7 @@ main .card:nth-child(3) .card__header {
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 10;
+    z-index: 1000;
     border: none;
     color: var(--text-color);
 }
@@ -297,7 +304,8 @@ main .card:nth-child(3) .card__header {
     .card__content_item_action .active {
         font-size: 13px;
     }
-    .card__content_item_action .edit, .card__content_item_action .delete {
+    .card__content_item_action .edit,
+    .card__content_item_action .delete {
         font-size: 13px;
     }
 }
@@ -330,4 +338,44 @@ main .card:nth-child(3) .card__header {
     .input {
         font-size: 20px;
     }
+}
+
+.catagory-work {
+    background-color: #c0e3f8;
+    color: #376b9e;
+}
+.catagory-personal {
+    background-color: #c6f6d4;
+    color: #2c6545;
+}
+.catagory-urgent {
+    background-color: #ffd8d5;
+    color: #b86264;
+}
+.catagory-other {
+    background-color: #e2e9f3;
+    color: #68727b;
+}
+
+#title_error,
+#category_error {
+    color: red;
+    font-size: 12px;
+    margin: 5px 0px;
+}
+
+.emty {
+    text-align: center;
+    font-style: italic;
+    color: #a1aebf;
+}
+
+.dragging {
+    opacity: 0.5;
+    transform: rotate(3deg);
+    cursor: grabbing;
+}
+
+.dragover {
+    border: 1px dashed;
 }
